--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -1,21 +1,22 @@
-name: Service Discovery - CI/CD
+name: Service Discovery - CI/CD Production
 
 on:
   push:
     branches:
-      - develop
-      - dev
+      - main
+      - master
   pull_request:
     branches:
-      - develop
-      - dev
+      - main
+      - master
   workflow_dispatch:
 
 env:
   REGISTRY: docker.io
   IMAGE_NAME: juanc7773/service-discovery
   SERVICE_NAME: service-discovery
-  KUBERNETES_NAMESPACE: ecommerce-dev  
+  KUBERNETES_NAMESPACE: ecommerce-prod
+  IMAGE_TAG: prod-0.1.0
 
 jobs:
   build-and-test:
@@ -65,20 +66,13 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Set image tag for dev
-      id: tag
-      run: |
-        # Este pipeline es solo para dev, siempre usa dev-latest
-        echo "IMAGE_TAG=dev-latest" >> $GITHUB_OUTPUT
-        echo "ENV_NAME=development" >> $GITHUB_OUTPUT
-        
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=raw,value=${{ steps.tag.outputs.IMAGE_TAG }}
+          type=raw,value=${{ env.IMAGE_TAG }}
           type=sha,format=short
           type=raw,value=0.1.0
           
@@ -97,7 +91,7 @@ jobs:
         cache-to: type=gha,mode=max
         
   deploy:
-    name: Deploy to Kubernetes
+    name: Deploy to Kubernetes (Production)
     needs: build-docker
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
@@ -106,13 +100,6 @@ jobs:
       contents: read
     
     steps:
-    - name: Set environment for dev
-      id: env
-      run: |
-        # Este pipeline es solo para dev, siempre usa dev-latest
-        echo "IMAGE_TAG=dev-latest" >> $GITHUB_OUTPUT
-        echo "ENV_NAME=development" >> $GITHUB_OUTPUT
-        
     - name: Checkout code
       uses: actions/checkout@v4
       
@@ -122,19 +109,31 @@ jobs:
         repository: ${{ secrets.INFRA_REPO }}
         path: infra
         
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        service_account_key: ${{ secrets.GCP_CREDENTIALS_PROD }}
+        project_id: ${{ secrets.GCP_PROJECT_ID_PROD }}
+        export_default_credentials: true
+        
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
         version: 'latest'
         
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
-    - name: Configure kubectl
+    - name: Configure kubectl (GKE Cluster)
       run: |
-        az aks get-credentials --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ secrets.AZURE_AKS_CLUSTER }} --overwrite-existing
+        CLUSTER_NAME="${{ secrets.GKE_CLUSTER_NAME_PROD }}"
+        CLUSTER_LOCATION="${{ secrets.GKE_CLUSTER_LOCATION_PROD }}"
+        PROJECT_ID="${{ secrets.GCP_PROJECT_ID_PROD }}"
+        
+        echo "Connecting to GKE cluster: $CLUSTER_NAME in location: $CLUSTER_LOCATION"
+        gcloud container clusters get-credentials "$CLUSTER_NAME" \
+          --location "$CLUSTER_LOCATION" \
+          --project "$PROJECT_ID"
+        
+        # Verificar conexión
+        kubectl cluster-info
         
     - name: Create namespace if not exists
       run: |
@@ -142,8 +141,9 @@ jobs:
         
     - name: Deploy to Kubernetes
       run: |
-        # Use dynamic tag based on branch (siempre mismo namespace: ecommerce-dev)
-        IMAGE_NAME="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.env.outputs.IMAGE_TAG }}"
+        IMAGE_NAME="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
+        
+        echo "Deploying image: $IMAGE_NAME to namespace: ${{ env.KUBERNETES_NAMESPACE }}"
         
         # Create temporary deployment file from infra repo
         cp infra/k8s/service-discovery/deployment.yaml deployment.tmp.yaml
@@ -154,34 +154,27 @@ jobs:
         # Cleanup
         rm deployment.tmp.yaml
         
-    - name: Force rollout restart (para tags estáticos como dev-latest)
-      run: |
-        # Cuando usamos tags estáticos (dev-latest, stage-latest), Kubernetes puede no detectar
-        # que la imagen cambió. Forzamos el restart para asegurar que descargue la nueva imagen.
-        if [[ "${{ steps.env.outputs.IMAGE_TAG }}" == "dev-latest" ]] || \
-           [[ "${{ steps.env.outputs.IMAGE_TAG }}" == "stage-latest" ]]; then
-          echo "Tag estático detectado: ${{ steps.env.outputs.IMAGE_TAG }}"
-          echo "Forzando rollout restart para asegurar descarga de nueva imagen..."
-          kubectl rollout restart deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }}
-        else
-          echo "Tag único detectado: ${{ steps.env.outputs.IMAGE_TAG }}, no se necesita restart forzado"
-        fi
-        
     - name: Wait for deployment
       run: |
         kubectl rollout status deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }} --timeout=600s || true
         
     - name: Verify deployment
       run: |
+        echo "=== Pods ==="
         kubectl get pods -n ${{ env.KUBERNETES_NAMESPACE }} -l app=${{ env.SERVICE_NAME }}
+        echo ""
+        echo "=== Services ==="
         kubectl get svc -n ${{ env.KUBERNETES_NAMESPACE }} -l app=${{ env.SERVICE_NAME }}
+        echo ""
+        echo "=== Deployment Status ==="
+        kubectl get deployment ${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }}
 
   release-notes:
     name: Generate Release Notes
     needs: deploy
     runs-on: ubuntu-latest
     if: |
-      (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/develop') &&
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') &&
       github.event_name != 'pull_request'
     
     permissions:
@@ -193,12 +186,12 @@ jobs:
       with:
         fetch-depth: 0  # Necesario para obtener todo el historial
     
-    - name: Set environment for dev
+    - name: Set environment for prod
       id: env
       run: |
-        # Este pipeline es solo para dev, siempre usa dev-latest
-        echo "IMAGE_TAG=dev-latest" >> $GITHUB_OUTPUT
-        echo "ENV_NAME=development" >> $GITHUB_OUTPUT
+        # Este pipeline es solo para prod, siempre usa prod-0.1.0
+        echo "IMAGE_TAG=prod-0.1.0" >> $GITHUB_OUTPUT
+        echo "ENV_NAME=production" >> $GITHUB_OUTPUT
     
     - name: Get latest tag
       id: get_tag
@@ -343,3 +336,4 @@ jobs:
       run: |
         echo " Skipping release: No commits with conventional prefixes found"
         echo "Commits must have prefixes like: chore:, feat:, fix:, etc."
+
