fix: install gke-gcloud-auth-plugin for GKE authentication

--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -119,6 +119,10 @@ jobs:
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID_PROD }}
         
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        gcloud components install gke-gcloud-auth-plugin --quiet
+        
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
       with:
