--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -108,18 +108,19 @@ jobs:
     
     steps:
     - name: Run Trivy vulnerability scanner (Informative)
+      id: trivy-scan
       uses: aquasecurity/trivy-action@master
       continue-on-error: true
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.IMAGE_TAG }}
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev-latest
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH,MEDIUM,LOW'
         exit-code: '0'  # No bloquea el pipeline, solo reporta
     
     - name: Upload Trivy results to GitHub Security
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      uses: github/codeql-action/upload-sarif@v4
+      if: always() && steps.trivy-scan.outcome == 'success'
       with:
         sarif_file: 'trivy-results.sarif'
     
@@ -127,7 +128,7 @@ jobs:
       uses: aquasecurity/trivy-action@master
       continue-on-error: true
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.IMAGE_TAG }}
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev-latest
         format: 'template'
         template: '@contrib/html.tpl'
         output: 'trivy-report.html'
