--- a/.github/workflows/ci-cd-stage.yml
+++ b/.github/workflows/ci-cd-stage.yml
@@ -100,6 +100,7 @@ jobs:
     
     steps:
     - name: Run Trivy vulnerability scanner (Informative)
+      id: trivy-scan
       uses: aquasecurity/trivy-action@master
       continue-on-error: true
       with:
@@ -110,8 +111,8 @@ jobs:
         exit-code: '0'  # No bloquea el pipeline, solo reporta
     
     - name: Upload Trivy results to GitHub Security
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      uses: github/codeql-action/upload-sarif@v4
+      if: always() && steps.trivy-scan.outcome == 'success'
       with:
         sarif_file: 'trivy-results.sarif'
     
