--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -198,7 +198,7 @@ jobs:
         cache-to: type=gha,mode=max
 
   security-scan:
-    name: Security Scan (Trivy)
+    name: Security Scan (Trivy) - Informative
     needs: [calculate-version, build-docker]
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
@@ -278,15 +278,16 @@ jobs:
         retention-days: 30
         if-no-files-found: warn
     
-    - name: Run Trivy vulnerability scanner (Strict - Blocks on CRITICAL/HIGH)
+    - name: Run Trivy vulnerability scanner (Informative)
       id: trivy-scan
       uses: aquasecurity/trivy-action@master
+      continue-on-error: true
       with:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         format: 'sarif'
         output: 'trivy-results.sarif'
-        severity: 'CRITICAL,HIGH'
-        exit-code: '1'  # Bloquea el pipeline si encuentra CRITICAL/HIGH
+        severity: 'CRITICAL,HIGH,MEDIUM,LOW'
+        exit-code: '0'  # Informativo, no bloquea el pipeline
         scanners: 'vuln'  # Solo vulnerabilidades, no secrets
     
     - name: Upload Trivy results to GitHub Security
