--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -145,7 +145,7 @@ jobs:
         
   deploy:
     name: Deploy to Kubernetes
-    needs: [build-docker, security-scan]
+    needs: build-docker
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     
