--- a/.github/workflows/ci-cd-stage.yml
+++ b/.github/workflows/ci-cd-stage.yml
@@ -137,7 +137,7 @@ jobs:
         
   deploy:
     name: Deploy to Kubernetes (Stage)
-    needs: [build-docker, security-scan]
+    needs: build-docker
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     
