feauture: RBAC to prod

--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -359,6 +359,37 @@ jobs:
       run: |
         kubectl create namespace ${{ env.KUBERNETES_NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
         
+    - name: Apply RBAC configuration
+      continue-on-error: true
+      run: |
+        echo "Applying RBAC configuration for ${{ env.SERVICE_NAME }}..."
+        
+        # Create temporary RBAC file from infra repo
+        cp infra/k8s/service-discovery/rbac.yaml rbac.tmp.yaml
+        
+        # Replace namespace placeholder
+        sed -i "s|<NAMESPACE>|${{ env.KUBERNETES_NAMESPACE }}|g" rbac.tmp.yaml
+        
+        # Apply RBAC resources
+        if kubectl apply -f rbac.tmp.yaml; then
+          echo "✓ RBAC configuration applied successfully"
+        else
+          echo "⚠ WARNING: Failed to apply RBAC configuration"
+          echo "⚠ This is likely because the GitHub Actions ServiceAccount doesn't have RBAC permissions"
+          echo "⚠ Please apply k8s/github-actions-rbac/github-actions-rbac.yaml manually"
+          echo "⚠ See: kubernetes-organization/k8s/github-actions-rbac/README.md"
+          exit 1
+        fi
+        
+        # Verify RBAC was applied
+        echo "Verifying RBAC resources..."
+        kubectl get serviceaccount service-discovery-sa -n ${{ env.KUBERNETES_NAMESPACE }} || echo "ServiceAccount not found"
+        kubectl get role service-discovery-role -n ${{ env.KUBERNETES_NAMESPACE }} || echo "Role not found"
+        kubectl get rolebinding service-discovery-rolebinding -n ${{ env.KUBERNETES_NAMESPACE }} || echo "RoleBinding not found"
+        
+        # Cleanup
+        rm rbac.tmp.yaml
+        
     - name: Deploy to Kubernetes
       run: |
         IMAGE_NAME="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
