--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -212,7 +212,7 @@ jobs:
         # Replace namespace placeholder
         sed -i "s|<NAMESPACE>|${{ env.KUBERNETES_NAMESPACE }}|g" deployment.tmp.yaml
         
-        # Remove serviceAccountName for dev (RBAC not used in dev)
+        # Remove serviceAccountName (RBAC removed)
         sed -i '/serviceAccountName:/d' deployment.tmp.yaml
         
         kubectl apply -f deployment.tmp.yaml
