--- a/.github/workflows/ci-cd-stage.yml
+++ b/.github/workflows/ci-cd-stage.yml
@@ -197,14 +197,27 @@ jobs:
         # Remove serviceAccountName (RBAC removed)
         sed -i '/serviceAccountName:/d' deployment.tmp.yaml
         
+        # First, try to remove serviceAccountName and tolerations from existing deployment if it exists
+        # kubectl apply doesn't remove fields, so we need to patch first
+        if kubectl get deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }} &>/dev/null; then
+          echo "Removing serviceAccountName and tolerations from existing deployment..."
+          kubectl patch deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }} --type=json -p='[
+            {"op": "remove", "path": "/spec/template/spec/serviceAccountName"},
+            {"op": "remove", "path": "/spec/template/spec/tolerations"}
+          ]' || echo "Warning: Could not patch deployment (may not have these fields)"
+        fi
+        
         kubectl apply -f deployment.tmp.yaml
         
-        # Force remove serviceAccountName and tolerations from existing deployment (kubectl apply doesn't remove fields)
-        # This ensures the deployment doesn't reference non-existent ServiceAccounts or production-only tolerations
+        # Ensure serviceAccountName and tolerations are removed after apply (in case they were re-added)
         kubectl patch deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }} --type=json -p='[
           {"op": "remove", "path": "/spec/template/spec/serviceAccountName"},
           {"op": "remove", "path": "/spec/template/spec/tolerations"}
         ]' || true
+        
+        # Verify that serviceAccountName was removed
+        echo "Verifying deployment spec..."
+        kubectl get deployment/${{ env.SERVICE_NAME }} -n ${{ env.KUBERNETES_NAMESPACE }} -o jsonpath='{.spec.template.spec.serviceAccountName}' && echo " (serviceAccountName found - this may cause issues)" || echo "✓ No serviceAccountName (correct)"
         
         # Cleanup
         rm deployment.tmp.yaml
